--- a/src/app/pages/detail/detail.component.html
+++ b/src/app/pages/detail/detail.component.html
@@ -1,42 +1,92 @@
 <app-nav></app-nav>
-<button [routerLink]="'../'" type="button" class="back btn btn-primary btn-lg">Back</button>
-<div class="parent"  *ngIf="$country | async; let country;">
-    <div class="center">
-        <div class="main_Content">
-        <div class="imgdiv">
-            <img [src]="country.flag" alt="">
-        </div>
-        <div class="info_side">
-            <div class="inner_info">
-                <h1 class="MainName">{{country.name}}</h1>
-                <div class="spliter">
-                    <div class="left">
-                        <p><span>Native Name:</span>&nbsp;&nbsp;{{country.nativeName}}</p>
-                        <p><span>Area:</span>&nbsp;&nbsp;{{country.area |number:"1.0"}} KM<sup>2</sup></p>
-                        <p><span>Population:</span>&nbsp;&nbsp;{{ country.population | number: "1.0" }}</p>
-                        <p><span>Languages:</span>&nbsp;&nbsp;{{country.languages[0].name}}</p>
-                        <p><span>Region:</span>&nbsp;&nbsp;{{country.region}}</p>
-                        <p><span>Capital:</span>&nbsp;&nbsp;{{country.capital}}</p>
-                    </div>
-                    <div class="right">
-                        <p><span>Calling Code:</span>&nbsp;&nbsp;+{{country.callingCodes}}</p>
-                        <p><span>Top Level Domain:</span>&nbsp;&nbsp;{{country.topLevelDomain}}</p>
-                        <p><span>Currency:</span>&nbsp;&nbsp;{{country.currencies[0].name}},&nbsp;{{country.currencies[0].symbol}}</p>
-                    </div>
-                </div>
+<!-- <link *ngIf="$country | async; let country;" rel="icon"  attr.href="{{country.flag}}" type="images/svg+xml"> -->
 
-                <div class="container">
-                    <div class="row">
-                        <p><span>Border Countrys:</span></p>
-                        <div class="col"  *ngIf="$borderCountry | async; let borders;">
-                            <button  [routerLink]="'../'+borderCountry.name"  *ngFor="let borderCountry of borders"   type="button" class="knopka btn btn-secondary">{{borderCountry.name}}</button>
-                    </div>
-                </div>
 
+<button [routerLink]="'../'" type="button" class="back btn btn-primary btn-lg">
+  Back
+</button>
+<div class="parent" *ngIf="$country | async; let country">
+  <div class="center">
+    <div class="main_Content">
+      <div class="imgdiv">
+        <img [src]="country.flag" alt="" />
+      </div>
+      <div class="info_side">
+        <div class="inner_info">
+          <h1 class="MainName">{{ country.name }}</h1>
+          <div class="spliter">
+            <div class="left">
+              <p>
+                <span>Native Name:</span>&nbsp;&nbsp;{{ country.nativeName }}
+              </p>
+              <p>
+                <span>Area:</span>&nbsp;&nbsp;{{
+                  country.area | number : "1.0"
+                }}
+                KM<sup>2</sup>
+              </p>
+              <p>
+                <span>Population:</span>&nbsp;&nbsp;{{
+                  country.population | number : "1.0"
+                }}
+              </p>
+              <p>
+                <span>Languages:</span>&nbsp;&nbsp;{{
+                  country.languages[0].name
+                }}
+              </p>
+              <p><span>Region:</span>&nbsp;&nbsp;{{ country.region }}</p>
+              <p><span>Capital:</span>&nbsp;&nbsp;{{ country.capital }}</p>
             </div>
-        </div>
+            <div class="right">
+              <p>
+                <span>Calling Code:</span>&nbsp;&nbsp;+{{
+                  country.callingCodes
+                }}
+              </p>
+              <p>
+                <span>Top Level Domain:</span>&nbsp;&nbsp;{{
+                  country.topLevelDomain
+                }}
+              </p>
+              <p>
+                <span>Currency:</span>&nbsp;&nbsp;{{
+                  country.currencies[0].name
+                }},&nbsp;{{ country.currencies[0].symbol }}
+              </p>
+            </div>
+          </div>
 
+          <div class="container">
+            <div class="row">
+              <p><span>Border Countrys:</span></p>
+              <div class="col" *ngIf="$borderCountry | async; let borders">
+                <button
+                  [routerLink]="'../' + borderCountry.name"
+                  *ngFor="let borderCountry of borders"
+                  type="button"
+                  class="knopka btn btn-secondary"
+                >
+                  {{ borderCountry.name }}
+                </button>
+
+              </div>
+            </div>
+            
+          </div>
         </div>
+      </div>
     </div>
-    </div>
+    <div class="container mt-5">
+      <h1 class="colorer">Photos</h1>
+      <div class="row">
+        <div *ngFor="let data of this.array" class="col d-flex mt-5">
+          <img class="foto  rounded col" [src]="data" alt="">
+      </div>
+      </div>
+  </div>
+  </div>
+  
 </div>
+
+
