--- a/src/app/pages/detail/detail.component.scss
+++ b/src/app/pages/detail/detail.component.scss
@@ -3,7 +3,7 @@
     justify-content: center;
     align-items: center;
     height: 100%;
-    margin-top: -50px;
+    flex-direction: column;
     .center{
         width: 70%;
         height: 60vh;
@@ -14,7 +14,7 @@
 
         }
         .imgdiv{
-            height: 60vh;
+            height: 60%;
             display: flex;
             align-items: center;
             width: 65%;
@@ -26,12 +26,12 @@
         }
         .info_side{
             width: 50%;
-            height: 60vh;
+            height: 60%;
             display: flex;
             align-items: center;
             .inner_info{
                 width: 100%;
-                height: 39.5vh;
+                height: 39.5%;
                 color: #fff;
                 padding: 0 9% 10%;
                 .left{
@@ -152,11 +152,6 @@
     height: 60px;
 }
 
-.image_box{
-    width: 100%;
-    border: solid 1px black;
-    height: 500px;
-}
 
 .geladzia{
     display: flex;
