--- a/src/app/pages/detail/detail.component.scss
+++ b/src/app/pages/detail/detail.component.scss
@@ -1,17 +1,26 @@
+
+.separator{
+    display: flex;
+    flex-direction: column;
+}
+.row{
+    display: flex;
+    height: auto;
+}
+
 .parent{
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 100%;
+    height: 500% !important;
     flex-direction: column;
+    height: auto;
     .center{
         width: 70%;
         height: 60vh;
         .main_Content{
             display: flex;
             align-items: center;
-
-
         }
         .imgdiv{
             height: 60%;
@@ -37,6 +46,9 @@
                 .left{
                     width: 50%;
                 }
+                .coller{
+                    width: 500px !important;
+                }
                 .right{
                     width: 50%;
                 }
@@ -59,9 +71,6 @@
                     font-weight: 600;
                 }
             }
-        }
-        .dispflex{
-            border: solid 1px black;
         }
         .flexable{
             margin: 0 !important;
@@ -112,6 +121,14 @@
         }
     }
 
+    .foto{
+        width: 200px !important;
+    }
+    
+.gialo{
+    margin-top: 400px !important;
+}
+
 }
 
 
@@ -126,6 +143,14 @@
             flex-direction: column !important;
         }
     }
+
+    
+    .gialo{
+        display: none !important;
+        .kairaa{
+            display: none;
+        }
+      }
 }
 
 
@@ -141,6 +166,10 @@
     .info_side{
         height: 45vh !important;
     }
+
+    .foto{
+        width: 100px !important;
+    }
 }
 
 .back{
@@ -153,10 +182,11 @@
 }
 
 
+
 .geladzia{
     display: flex;
     align-items: center;
-    flex-direction: column;
+    flex-direction: column-reverse;
 }
 
 
@@ -166,6 +196,11 @@
   }
 
   .foto{
-    width: 300px !important;
+    width: 200px;
     object-fit: cover;
+    transition: 200ms;
+    &:hover{
+        transform: scale(2.1);
+
+    }
   }
