--- a/src/styles.scss
+++ b/src/styles.scss
@@ -5,6 +5,7 @@ body{
     background-color: #202c38 !important;
     font-family: 'Montserrat', sans-serif !important;
     font-weight: 400 !important;
+    overflow-y: scroll;
 }
 
 /* ===== Scrollbar CSS ===== */
