--- a/src/app/pages/detail/detail.component.html
+++ b/src/app/pages/detail/detail.component.html
@@ -1,6 +1,5 @@
 <app-nav></app-nav>
-<!-- <link *ngIf="$country | async; let country;" rel="icon"  attr.href="{{country.flag}}" type="images/svg+xml"> -->
-
+<link *ngIf="$country | async; let country;" rel="icon"  href="{{country}}" type="images/svg+xml"> -->
 
 <button [routerLink]="'../'" type="button" class="back btn btn-primary btn-lg">
   Back
