--- a/src/app/component/country-card/country-card.component.html
+++ b/src/app/component/country-card/country-card.component.html
@@ -1,8 +1,4 @@
-<div
-  [routerLink]="country.name"
-  class="card hoverable"
-  style="width: 18rem"
->
+<div [routerLink]="country.name" class="card hoverable" style="width: 18rem">
   <img class="card-img-top" [src]="country.flag" alt="Card image cap" />
   <div class="card-body">
     <h5 class="card-title">{{ country.name }}</h5>
@@ -12,6 +8,8 @@
       </h5>
       <p class="card-text"><span>Region:</span> {{ country.region }}</p>
       <p class="card-text"><span>Capital:</span> {{ country.capital }}</p>
+      <p class="card-text"><span>Indepedent:</span> {{ country.independent }}</p>
+
     </div>
   </div>
 </div>
