--- a/src/app/navbar/nav/nav.component.html
+++ b/src/app/navbar/nav/nav.component.html
@@ -1,5 +1,10 @@
 <div class="navbar">
     <h1>Search The World<i class="bi bi-search"></i></h1>
 
-
+    <div class="images_by">
+        <p>Images By</p>
+        <a href="https://www.pexels.com">
+            <img width="100px" src="https://images.pexels.com/lib/api/pexels-white.png" />
+          </a>
+    </div>
 </div>
