--- a/src/app/navbar/nav/nav.component.scss
+++ b/src/app/navbar/nav/nav.component.scss
@@ -14,4 +14,11 @@
     i{
         margin-left: 10px;
     }
+    .images_by{
+        margin-right: 10px;
+        p{
+            color: #fff;
+            margin: 0;
+        }
+    }
 }
