--- a/src/app/navbar/nav/nav.component.html
+++ b/src/app/navbar/nav/nav.component.html
@@ -3,8 +3,8 @@
 
     <div class="images_by">
         <p>Images By</p>
-        <a href="https://www.pexels.com">
-            <img width="100px" src="https://images.pexels.com/lib/api/pexels-white.png" />
+        <a href="https://pixabay.com/sk/">
+            <img width="40px" src="https://cdn.freebiesupply.com/logos/large/2x/pixabay-logo-png-transparent.png" />
           </a>
     </div>
 </div>
