--- a/src/app/navbar/nav/nav.component.scss
+++ b/src/app/navbar/nav/nav.component.scss
@@ -16,6 +16,9 @@
     }
     .images_by{
         margin-right: 10px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
         p{
             color: #fff;
             margin: 0;
