Minor Router Link Changes

--- a/src/app/navbar/nav/nav.component.html
+++ b/src/app/navbar/nav/nav.component.html
@@ -1,5 +1,5 @@
 <div class="navbar">
-    <h1>Search The World<i class="bi bi-search"></i></h1>
+    <a routerLink="../">Search The World<i class="bi bi-search"></i></a>
 
     <div class="images_by">
         <p>Images By</p>
