--- a/src/app/navbar/nav/nav.component.scss
+++ b/src/app/navbar/nav/nav.component.scss
@@ -4,12 +4,13 @@
     background-color: #2b3743;
     display: flex;
     align-items: center;
-    h1{
+    a{
         color: #fff;
         padding: 0 7%;
         font-weight: 700;
         font-size: 19px;
         margin: 0;
+        text-decoration: none;
     }
     i{
         margin-left: 10px;
