Minor Wikipedia Changes

--- a/src/app/pages/detail/detail.component.html
+++ b/src/app/pages/detail/detail.component.html
@@ -8,7 +8,7 @@
     <div class="center">
       <div class="main_Content">
         <div class="imgdiv">
-          <a [href]="levani+country.name"><img [src]="country.flag" alt="" /></a>
+          <a target="_blank" [href]="levani+country.name"><img [src]="country.flag" alt="" /></a>
         </div>
         <div class="info_side">
           <div class="inner_info">
