--- a/src/app/pages/detail/detail.component.scss
+++ b/src/app/pages/detail/detail.component.scss
@@ -208,3 +208,13 @@
   .colorer{
     padding: 7px 17px !important;
   }
+
+  .Wiki{
+    color: #fff;
+    font-size: 13px;
+    transition: 100ms;
+  }
+
+  .axalibtn{
+    margin-top: 10px;
+  }
