--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -4,10 +4,9 @@
 </div>
 <div class="container " >
     <div class="row"  >  
-            <app-country-card  class="col d-flex mt-5"  
-            *ngFor="let country of source">
-            [country]="country"
-            </app-country-card>
+        <app-country-card  class="col d-flex mt-5"  *ngFor="let country of $countries | async"
+        [country]="country">
+        </app-country-card>
     </div>
 </div>
 
