--- a/src/app/component/country-card/country-card.component.scss
+++ b/src/app/component/country-card/country-card.component.scss
@@ -9,6 +9,7 @@
 
 .card{
     border: 0;
+    transition: 500ms;
     img{
         width: 100%;
         height: 100%;
@@ -20,11 +21,12 @@
     .card-body{
         background-color: #2b3743;
         color: #fff;
-        transition: 200ms;
+        transition: 500ms;
     }
     &:hover{
         .card-body{
             background-color: #202931;
+            box-shadow: 0px 17px 50px 0px rgba(73, 72, 72, 0.3)
         }
     }
     cursor: pointer;
