--- a/src/app/pages/detail/detail.component.html
+++ b/src/app/pages/detail/detail.component.html
@@ -53,7 +53,7 @@
                   country.currencies[0].name
                   }},&nbsp;{{ country.currencies[0].symbol }}
                 </p>
-                <p style="width:200px" *ngIf="country.capital"><span>weather In</span> &nbsp;{{ country.capital
+                <p style="width:200px" *ngIf="country.capital"><span style="color: #fec900;">weather In</span> &nbsp;{{ country.capital
                   }}&nbsp;{{ RoundedTemp | json }}&#8451;</p>
                   
                 <a target="_blank" [href]="levani+country.name">
@@ -71,7 +71,7 @@
               <div class="row">
                 <p><span>Border Countrys:</span></p>
                 <div class="col coller" *ngIf="$borderCountry | async; let borders">
-                  <button [routerLink]="'../' + borderCountry.name" *ngFor="let borderCountry of borders" type="button"
+                  <button [routerLink]="'/'+ country.name" *ngFor="let borderCountry of borders" type="button"
                     class="knopka btn btn-secondary">
                     <a class="text-decoration-none colorer" href="{{ borderCountry.name }}">{{ borderCountry.name }}</a>
                   </button>
