Facebook Auth Button

--- a/src/app/navbar/nav/nav.component.html
+++ b/src/app/navbar/nav/nav.component.html
@@ -1,6 +1,6 @@
 <div class="navbar">
     <a routerLink="../">Search The World<i class="bi bi-search"></i></a>
-
+<a routerLink="profile">Profile</a>
     <div class="images_by">
         <p>Images By</p>
         <a href="https://pixabay.com/sk/">
