--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -8,6 +8,6 @@
 <div *ngIf="loggedIn">
 <img src="{{ user.photoUrl }}">
 <div>
-  <h4>{{ user.name }}</h4>
+  <h4>{{ user.name }}asfasf</h4>
 </div>
 </div>
