Small Color Changes

--- a/src/app/pages/detail/detail.component.html
+++ b/src/app/pages/detail/detail.component.html
@@ -53,7 +53,7 @@
                   country.currencies[0].name
                   }},&nbsp;{{ country.currencies[0].symbol }}
                 </p>
-                <p style="width:200px" *ngIf="country.capital"><span>weather In</span> &nbsp;{{ country.capital
+                <p style="width:200px; color:#cf9000;" *ngIf="country.capital"><span>weather In</span> &nbsp;{{ country.capital
                   }}&nbsp;{{ RoundedTemp | json }}&#8451;</p>
                   
                 <a target="_blank" [href]="levani+country.name">
