Profile Last Try Commit version 1.0

--- a/src/app/navbar/nav/nav.component.html
+++ b/src/app/navbar/nav/nav.component.html
@@ -1,9 +1,13 @@
 <div class="navbar">
     <a routerLink="../">Search The World<i class="bi bi-search"></i></a>
-    <div class="images_by">
-        <p>Images By</p>
-        <a href="https://pixabay.com/sk/">
-            <img width="40px" src="https://cdn.freebiesupply.com/logos/large/2x/pixabay-logo-png-transparent.png" />
-        </a>
+    <div class="divider">
+
+        <a class="Profile p-0" routerLink="profile"><i class="bi bi-person"></i>Profile</a>
+        <div class="images_by">
+            <p>Images By</p>
+            <a href="https://pixabay.com/sk/">
+                <img width="40px" src="https://cdn.freebiesupply.com/logos/large/2x/pixabay-logo-png-transparent.png" />
+            </a>
+        </div>
     </div>
 </div>
